EQEMu Changelog (Started on Sept 24, 2003 15:50)
-------------------------------------------------------
==08/13/2010==
Derision: Spells/Songs with a Locate Corpse effect now work in SoD and later clients.
Derision: Spells/Songs with a Sense Undead/Summoned/Animal effect now work in SoD and later clients.

==08/13/2010==
Derision: Elemental Draw should now work for SoD.

==08/08/2010==
Derision: Added check for invalid neighbour nodes on loading .path files.
wheeljack: Fixed Bazaar search for items with focus effects.
wheeljack: Buff Timer Suspension.
wheeljack: Tradeskill messages for missing components.

REQUIRED SQL:

ALTER TABLE zone ADD suspendbuffs tinyint(1) unsigned NOT NULL DEFAULT 0;
UPDATE zone SET suspendbuffs = 1 WHERE short_name IN ('guildlobby', 'guildhall');

==08/01/2010==
Trevius: Exported the following to Perl Mob: GetWaypointX(), GetWaypointY(), GetWaypointZ(), GetWaypointH(), GetWaypointPause(), and GetWaypointID().

==07/27/2010==
Trevius: Exported SpellFinished(spell_id, spell_target = this, mana_cost = 0) to Perl Mob.

==07/26/2010==
Trevius: (Secrets) Added quest::creategroundobjectfrommodel(modelname, x, y, z, heading, [type]) command.
Trevius: (Secrets) quest::creategroundobject(itemid, x, y, z, heading) now returns object ID.
Trevius: (Secrets) Added Object List Iteration functions GetObjectByDBID(id), GetObjectByID(id), GetObjectList().
Trevius: (Secrets) exported Objects to Perl with the following commands:
		IsGroundSpawn(), Close(), Delete(reset_state=false), StartDecay(), DeleteItem(index), IsObject(), 
		Save(), SetID(set_id), ClearUser(), DBID(), GetID(), GetX(), GetY(), GetZ(), GetHeading(), VarSave(), 
		GetType(), SetType(type), GetIcon(), SetIcon(icon), GetItemID(), SetItemID(itemid), SetLocation(x, y, z), 
		SetX(XPos), SetY(YPos), SetZ(ZPos), SetHeading(heading), SetModelName(name), GetModelName(), Repop(), Depop().

==07/25/2010==
Trevius: (Caryatis) Added the following Spell Effects: